// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`component <Loading /> should render correctly 1`] = `
<div
  className="loading loading--spinner"
/>
`;

exports[`component <Loading /> should render pulse type 1`] = `
<div
  className="loading loading--pulse"
/>
`;

exports[`component <Loading /> should render small size 1`] = `
<div
  className="loading loading--spinner loading--sm"
/>
`;
